| Priyanshu | added 25th_march translation for punjabi & Kannada

--- a/locales/pa.json
+++ b/locales/pa.json
@@ -156,9 +156,9 @@
 	"<b>Read once</b> before recording it": "ਇਹ ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਇੱਕ ਵਾਰ ਪੜ੍ਹੋ",
 	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "ਬੋਲੀ ਪਛਾਣ ਤਕਨਾਲੋਜੀ \"ਮਸ਼ੀਨ ਸਿਖਲਾਈ\" ਤਕਨਾਲੋਜੀ 'ਤੇ ਨਿਰਭਰ ਕਰਦੀ ਹੈ ਜਿਸ ਲਈ ਬਹੁਤ ਵਿਸ਼ਾਲ ਮਾਤਰਾ ਵਿੱਚ ਡਾਟਾਸੈੱਟਾਂ ਦੇ ਸੰਗ੍ਰਹਿ ਦੀ ਲੋੜ ਹੁੰਦੀ ਹੈ, ਜਿਸ ਵਿੱਚ ਬਹੁਭਾਂਤੀ ਭਾਰਤੀ ਅਵਾਜ਼ਾਂ ਅਤੇ ਉਹਨਾਂ ਨਾਲ ਸੰਬੰਧਿਤ ਲਿਖਤਾਂ ਸ਼ਾਮਲ ਹੁੰਦੀਆਂ ਹਨ। ਵਾਕਿਆਂਸ਼ ਦੇ ਰਾਹੀਂ,ਅਸੀਂ ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਬੋਲਣ ਵਾਲੀਆਂ ਭਾਰਤੀ ਅਵਾਜਾਂ ਦਾ ਇੱਕ ਵਿਭਿੰਨ ਖੁੱਲੇ ਸਰੋਤ ਦਾ ਭੰਡਾਰ ਬਣਾਉਣਾ ਚਾਹੁੰਦਾ ਹੈ, ਜਿਸ ਨੂੰ ਇਸ ਪਹਿਲ ਲਈ ਵਰਤਿਆ ਜਾ ਸਕੇ",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "ਅੱਗੇ ਜਾਰੀ ਰੱਖ ਕੇ ਤੁਸੀਂ <a href=\"/terms-and-conditions\">ਸ਼ਰਤਾਂ ਤੇ ਨਿਯਮਾਂ</a> ਨਾਲ ਸਹਿਮਤ ਹੋ",
-	"Transgender - He": "ਟਰਾਂਸਜੈਂਡਰ - ਸ੍ਰੀਮਾਨ",
-	"Transgender - She": "ਟਰਾਂਸਜੈਂਡਰ - ਸ੍ਰੀਮਤੀ",
-	"Rather Not Say": "Rather Not Say",
+	"Transgender - He": "ਟਰਾਂਸਜੈਂਡਰ-ਸ੍ਰੀਮਾਨ",
+	"Transgender - She": "ਟਰਾਂਸਜੈਂਡਰ -ਸ੍ਰੀਮਤੀ",
+	"Rather Not Say": "ਕਹਿਣਾ ਨਹੀਂ ਚਾਹੁੰਦੇ",
 	"Feedback": "ਸੁਝਾਅ",
 	"Quick Tips": "ਫੌਰੀ ਗੁਰ",
 	"Read once <b>before recording it</b>": "ਇਹ ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਇੱਕ ਵਾਰ ਪੜ੍ਹੋ",
@@ -199,7 +199,7 @@
 	"Spread the word. Share it with your friends and family.": "ਇਸ ਬਾਰੇ ਸਭ ਨੂੰ ਦੱਸੋ। ਆਪਣੇ ਦੋਸਤਾਂ ਅਤੇ ਪਰਿਵਾਰ ਨਾਲ ਇਸ ਨੂੰ ਸਾਂਝਾ ਕਰੋ।",
 	"I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great lingusitic applications. Our <x> language ranks <y> on boloindia. Do your bit and empower the language?": "ਮੈਂ https://boloindia.nplt.in 'ਤੇ ਭਾਰਤ ਲਈ ਭਾਸ਼ਾਵਾਂ ਦੇ ਖੁੱਲੇ ਸਰੋਤ ਦੇ ਭੰਡਾਰ ਨੂੰ ਬਣਾਉਣ ਵਿੱਚ ਆਪਣਾ ਯੋਗਦਾਨ ਪਾਇਆ। ਮੈਂ ਅਤੇ ਤੁਸੀਂ ਆਪਣੀਆਂ ਅਵਾਜ਼ਾਂ ਦਾ ਯੋਗਦਾਨ ਕਰਕੇ ਮਸ਼ੀਨਾਂ ਨੂੰ ਸਾਡੀਆਂ ਭਾਸ਼ਾਵਾਂ ਸਿੱਖਣ ਅਤੇ ਬਿਹਤਰੀਨ ਭਾਸ਼ਾਈ ਐਪਲੀਕੇਸ਼ਨਾਂ ਰਾਹੀਂ ਸਾਡੇ ਨਾਲ ਗੱਲਬਾਤ ਕਰਨ ਵਿੱਚ ਮਦਦ ਕਰ ਸਕਦੇ ਹਾਂ। ਸਾਡੀ <x> ਭਾਸ਼ਾ boloindia 'ਤੇ <y> ਦਰਜੇ 'ਤੇ ਹੈ। ਕੀ ਤੁਸੀਂ ਯੋਗਦਾਨ ਪਾ ਕੇ ਆਪਣੀ ਭਾਸ਼ਾ ਨੂੰ ਸਸ਼ਕਤ ਬਣਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ?",
 	"Help your own language": "ਤੁਹਾਡੀ ਆਪਣੀ ਭਾਸ਼ਾ ਲਈ ਮਦਦ",
-	"Report": "Report",
+	"Report": "ਰਿਪੋਰਟ ਕਰੋ",
 	"Report Content": "ਸਮੱਗਰੀ ਬਾਰੇ ਰਿਪੋਰਟ ਕਰੋ",
 	"Help us understand what’s wrong with the sentence": "ਸਾਨੂੰ ਸਮਝਣ ਵਿੱਚ ਮਦਦ ਕਰੋ ਕਿ ਵਾਕ ਵਿੱਚ ਕੀ ਗਲਤ ਹੈ",
 	"Offensive": "ਅਪਮਾਨਜਨਕ",
@@ -215,9 +215,9 @@
 	"Congratulations!!! You have completed this batch of sentences": "ਵਧਾਈਆਂ!!! ਤੁਸੀਂ ਵਾਕਾਂ ਦਾ ਇਹ ਸਮੂਹ ਪੂਰਾ ਕਰ ਲਿਆ ਹੈ",
 	"Congratulations! You have validated a batch of recordings!": "ਵਧਾਈਆਂ! ਤੁਸੀਂ ਅਵਾਜ਼ੀ ਨਮੂਨਿਆਂ ਦੇ ਇੱਕ ਬੈਚ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕੀਤਾ!",
 	"Select the language for voluntary contribution": "ਵਲੰਟੀਅਰ ਯੋਗਦਾਨ ਲਈ ਭਾਸ਼ਾ ਚੁਣੋ",
-	"Speak": "Speak",
+	"Speak": "ਬੋਲੋ",
 	"Validate What They Say": "ਪ੍ਰਮਾਣਿਤ ਕਰੋ ਕਿ ਉਹਨਾਂ ਕੀ ਕਿਹਾ ਹੈ",
-	"Help us by validating the recordings that others have contributed": "Help us by validating the recordings that others have contributed",
+	"Help us by validating the recordings that others have contributed": "ਹੋਰਾਂ ਵਲੋਂ ਯੋਗਦਾਨ ਦਿੱਤੀ ਰਿਕਾਰਡਿੰਗ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਸਾਡੀ ਮਦਦ ਕਰੋ",
 	"Bolo India: A crowdsourcing initiative for Indian languages": "ਬੋਲੋ ਇੰਡੀਆ: ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਲਈ ਇੱਕ ਕਰਾਊਡਸੋਰਸਿੰਗ ਪਹਿਲ",
 	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "ਭਾਰਤ ਨੂੰ ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਵਿੱਚ ਬੋਲੀ ਪਛਾਣ ਦੇ ਖੇਤਰ ਵਿੱਚ ਆਤਮ ਨਿਰਭਰ ਹੋਣ ਦੀ ਲੋੜ ਹੈ। ਇਸਕਰਕੇ ਅਸੀਂ ਕਈ ਭਾਸ਼ਾਵਾਂ ਵਿੱਚ ਆਵਾਜ਼ ਦਾ ਆਜ਼ਾਦ ਡਾਟਾ ਭੰਡਾਰ ਬਣਾਉਣਾ ਚਾਹੁੰਦੇ ਹਾਂ। ਬੋਲੋ ਇੰਡੀਆ ਤੁਹਾਨੂੰ ਇਸ ਮਕਸਦ ਲਈ ਆਪਣੀ ਆਵਾਜ਼ ਲਈ ਵਲੰਟੀਅਰ ਯੋਗਦਾਨ ਪਾਉਣ ਲਈ ਸੱਦਾ ਦਿੰਦਾ ਹੈ।",
 	"languages": "ਭਾਸ਼ਾਵਾਂ",
@@ -265,15 +265,15 @@
 	"Start Contributing in <span id=\"start-validation-language\"></span>": "<span id=\"start-validation-language\"></span> ਵਿੱਚ ਯੋਗਦਾਨ ਪਾਉਣਾ ਸ਼ੁਰੂ ਕਰੋ",
 	"Please test your <b>speakers</b>": "ਕਿਰਪਾ ਕਰਕੇ ਆਪਣੇ <b>ਸਪੀਕਰਾਂ</b> ਦੀ ਜਾਂਚ ਕਰੋ",
 	"Gender Distribution": "ਲਿੰਗ ਮੁਤਾਬਕ ਵੰਡ",
-	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
-	"Please validate any error message before proceeding": "Please validate any error message before proceeding",
-	"SKIP": "SKIP",
-	"Next": "Next",
-	"CLOSE": "CLOSE",
-	"Back": "Back",
-	"You can select the language in which you want to participate": "You can select the language in which you want to participate",
-	"You can change the language in which you want to read content": "You can change the language in which you want to read content",
-	"Click on the card to start contributing your voice": "Click on the card to start contributing your voice",
-	"Click on the card to validate what others have spoken":"Click on the card to validate what others have spoken"
+	"Help us understand what’s wrong with the recording": "ਸਾਨੂੰ ਸਮਝਣ ਲਈ ਮਦਦ ਕਰੋ ਕਿ ਰਿਕਾਰਡਿੰਗ ਵਿੱਚ ਕੀ ਗਲਤ ਹੈ",
+	"Please validate any error message before proceeding": "ਜਾਰੀ ਰੱਖਣ ਤੋਂ ਪਹਿਲਾਂ ਕਿਸੇ ਵੀ ਗ਼ਲਤੀ ਸੁਨੇਹੇ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰੋ",
+	"SKIP": "ਛੱਡੋ",
+	"Next": "ਅੱਗੇ",
+	"CLOSE": "ਬੰਦ ਕਰੋ",
+	"Back": "ਪਿੱਛੇ",
+	"You can select the language in which you want to participate": "ਤੁਸੀਂ ਭਾਸ਼ਾ ਚੁਣ ਸਕਦੇ ਹੋ, ਜਿਸ ਵਾਸਤੇ ਤੁਸੀਂ ਯੋਗਦਾਨ ਪਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ",
+	"You can change the language in which you want to read content": "ਤੁਸੀਂ ਭਾਸ਼ਾ ਚੁਣ ਸਕਦੇ ਹੋ, ਜਿਸ ਵਾਸਤੇ ਤੁਸੀਂ ਸਮੱਗਰੀ ਪੜ੍ਹਨੀ ਚਾਹੁੰਦੇ ਹੋ",
+	"Click on the card to start contributing your voice": "ਆਪਣੀ ਆਵਾਜ਼ ਵਿੱਚ ਯੋਗਦਾਨ ਪਾਉਣਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ ਕਾਰਡ ਉੱਤੇ ਕਲਿੱਕ ਕਰੋ",
+	"Click on the card to validate what others have spoken":"ਹੋਰਾਂ ਵਲੋਂ ਬੋਲੇ ਗਏ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਕਾਰਡ ਉੱਤੇ ਕਲਿੱਕ ਕਰੋ"
 
 }
