| Priyanshu | added translation for Badge Info page in bn,gu,kn,or,pa,ta

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -281,18 +281,18 @@
 	"You can change the language in which you want to read content": "আপনি ভাষা বদলাতে পারেন যাতে আপনি যে বিষয় পড়তে চান",
 	"Click on the card to start contributing your voice": "আপনার স্বর অবদান শুরু করতে কার্ড-এ ক্লিক করুন",
 	"Click on the card to validate what others have spoken":"অন্যেরা কে কি বলেছে তা যাচাই করতে কার্ড-এ ক্লিক করুন",
-	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Levels and Badging @BoloIndia": "স্তর ও ব্যাজিং @BoloIndia",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
-	"bronze": "Bronze",
-	"silver": "Silver",
-	"gold": "Gold",
-	"platinum": "Platinum",
-	"Contributor Levels": "Contributor Levels",
-	"Participate more to gain badges": "Participate more to gain badges",
-	"Level": "Level",
-	"Contributions": "Contributions",
-	"Sentences": "Sentences",
-	"(Recording + Validating)": "(Recording + Validating)",
-	"Badge": "Badge",
-	"N/A": "N/A"
+	"bronze": "ব্রোঞ্চ",
+	"silver": "রৌপ্য",
+	"gold": "স্বর্ণ",
+	"platinum": "প্ল্যাটিনাম",
+	"Contributor Levels": "আবেদনকারী স্তরগুলি",
+	"Participate more to gain badges": "ব্যাজ অর্জন করতে আরও অংশ নিন",
+	"Level": "স্তর",
+	"Contributions": "আবেদনকারীগণ",
+	"Sentences": "বাক্য",
+	"(Recording + Validating)": "(রেকর্ডিং + বৈধকরণ)",
+	"Badge": "ব্যাজ",
+	"N/A": "প্রযোজ্য নয়"
 }
