--- a/locales/gu.json
+++ b/locales/gu.json
@@ -185,18 +185,18 @@
 	"You can change the language in which you want to read content": "તમે જેમાં સામગ્રી વાંચવા માંગતા હોવ તે ભાષા બદલી શકો છો",
 	"Click on the card to start contributing your voice": "તમારા અવાજનો ફાળો આપવા માટે કાર્ડ પર ક્લિક કરો",
 	"Click on the card to validate what others have spoken":"અન્ય લોકો બોલ્યા હોય તેને માન્યતા આપવા માટે કાર્ડ પર ક્લિક કરો",
-	"Levels and Badging @BoloIndia": "ସ୍ତର ଏବଂ ବ୍ୟାଜ୍ @ ବୋଲୋ ଇଣ୍ଡିଆ",
+	"Levels and Badging @BoloIndia": "લેવલ્સ અને બેજિંગ @BoloIndia",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
-	"bronze": "ପିତ୍ତଳ",
-	"silver": "ରୂପା",
-	"gold": "ସୁନା",
-	"platinum": "ପ୍ଲାଟିନମ୍",
-	"Contributor Levels": "ଯୋଗଦାନକାରୀ ସ୍ତର",
-	"Participate more to gain badges": "ବ୍ୟାଜ୍ ପାଇବା ପାଇଁ ଅଧିକ ଅଂଶଗ୍ରହଣ କରନ୍ତୁ",
-	"Level": "ସ୍ତର",
-	"Contributions": "ଅବଦାନ",
-	"Sentences": "ବାକ୍ୟଗୁଡ଼ିକ",
-	"(Recording + Validating)": "(ରେକର୍ଡିଂ + ବୈଧତା)",
-	"Badge": "ବ୍ୟାଜ୍",
-	"N/A": "ଏନ୍\u200C/ଏ"
+	"bronze": "બ્રોન્ઝ",
+	"silver": "સિલ્વર",
+	"gold": "ગોલ્ડ",
+	"platinum": "પ્લેટિનમ",
+	"Contributor Levels": "ફાળો આપનારના લેવલ",
+	"Participate more to gain badges": "વધુ બેજ મેળવવા માટે વધુ ભાગ લો",
+	"Level": "લેવલ",
+	"Contributions": "ફાળા",
+	"Sentences": "વાક્યો",
+	"(Recording + Validating)": "(રેકોર્ડિંગ + માન્યતા)",
+	"Badge": "બેજ",
+	"N/A": "N/A"
 }
