--- a/locales/kn.json
+++ b/locales/kn.json
@@ -208,18 +208,18 @@
 	"You can change the language in which you want to read content": "You can change the language in which you want to read content",
 	"Click on the card to start contributing your voice": "Click on the card to start contributing your voice",
 	"Click on the card to validate what others have spoken":"Click on the card to validate what others have spoken",
-	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Levels and Badging @BoloIndia": "ಲೆವೆಲ್ಯ್ ಆಂಡ್ ಬ್ಯಾಜಿಂಗ್ @ ಬೋಲೋ ಇಂಡಿಯಾ",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
-	"bronze": "Bronze",
-	"silver": "Silver",
-	"gold": "Gold",
-	"platinum": "Platinum",
-	"Contributor Levels": "Contributor Levels",
-	"Participate more to gain badges": "Participate more to gain badges",
-	"Level": "Level",
-	"Contributions": "Contributions",
-	"Sentences": "Sentences",
-	"(Recording + Validating)": "(Recording + Validating)",
-	"Badge": "Badge",
-	"N/A": "N/A"
+	"bronze": "ಕಂಚು",
+	"silver": "ಬೆಳ್ಳಿ",
+	"gold": "ಬಂಗಾರ",
+	"platinum": "ಪ್ಲಾಟಿನಮ್",
+	"Contributor Levels": "ಕೊಡುಗೆದಾರರ ಪ್ರಮಾಣ",
+	"Participate more to gain badges": "ಬ್ಯಾಜ್ ಗಳನ್ನು ಗಳಿಸಲು ಹೆಚ್ಚು ಭಾಗವಹಿಸಿರಿ",
+	"Level": "ಪ್ರಮಾಣ",
+	"Contributions": "ಕೊಡುಗೆದಾರರು",
+	"Sentences": "ವಾಕ್ಯಗಳು",
+	"(Recording + Validating)": "(ರೆಕಾರ್ಡಿಂಗ್ + ಮೌಲ್ಯೀಕರಣ)",
+	"Badge": "ಬ್ಯಾಜ್",
+	"N/A": "ಅನ್ವಯಿಸುವುದಿಲ್ಲ"
 }
