--- a/locales/pa.json
+++ b/locales/pa.json
@@ -275,18 +275,18 @@
 	"You can change the language in which you want to read content": "You can change the language in which you want to read content",
 	"Click on the card to start contributing your voice": "Click on the card to start contributing your voice",
 	"Click on the card to validate what others have spoken":"Click on the card to validate what others have spoken",
-	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Levels and Badging @BoloIndia": "ਪੱਧਰ ਤੇ ਬਿੱਲੇ  @BoloIndia",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
-	"bronze": "Bronze",
-	"silver": "Silver",
-	"gold": "Gold",
-	"platinum": "Platinum",
-	"Contributor Levels": "Contributor Levels",
-	"Participate more to gain badges": "Participate more to gain badges",
-	"Level": "Level",
-	"Contributions": "Contributions",
-	"Sentences": "Sentences",
-	"(Recording + Validating)": "(Recording + Validating)",
-	"Badge": "Badge",
-	"N/A": "N/A"
+	"bronze": "ਕਾਂਸੀ",
+	"silver": "ਚਾਂਦੀ",
+	"gold": "ਸੋਨਾ",
+	"platinum": "ਪਲੈਟੀਨਮ",
+	"Contributor Levels": "ਯੋਗਦਾਨੀ ਪੱਧਰ",
+	"Participate more to gain badges": "ਹੋਰ ਬਿੱਲੇ ਲੈਣ ਲਈ ਹਿੱਸਾ ਲਵੋ",
+	"Level": "ਪੱਧਰ",
+	"Contributions": "ਯੋਗਦਾਨੀ",
+	"Sentences": "ਵਾਕ",
+	"(Recording + Validating)": "(ਰਿਕਾਰਡਿੰਗ + ਪ੍ਰਮਾਣਿਤ)",
+	"Badge": "ਬਿੱਲੇ",
+	"N/A": "ਲਾਗੂ ਨਹੀਂ"
 }
