--- a/locales/ml.json
+++ b/locales/ml.json
@@ -35,7 +35,6 @@
 	"LET'S GO": "തുടങ്ങാം",
 	"Hide details": "വിശദാംശങ്ങൾ മറയ്ക്കുക",
 	"Select Your Preferred Language": "നിങ്ങൾക്ക് ഇഷ്ടപ്പെട്ട ഭാഷ തിരഞ്ഞെടുക്കുക",
-	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
 	"Terms & Conditions": "നിബന്ധനകളും വ്യവസ്ഥകളും",
 	"Privacy Policy": "സ്വകാര്യതാ നയം",
 	"------- ABOUT US ----------": "------- ABOUT US -------",
@@ -147,7 +146,7 @@
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> റെക്കോർഡിംഗുകൾ സാധൂകരിച്ചതിന് നന്ദി",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "മുന്നോട്ട് പോകുന്നതിലൂടെ, നിങ്ങൾ <a href=\"/terms-and-conditions\">നിബന്ധനകളും വ്യവസ്ഥകളും</a> അംഗീകരിക്കുന്നു",
 	"Test your Microphone and Speakers": "നിങ്ങളുടെ മൈക്രോഫോണും സ്പീക്കറുകളും പരിശോധിക്കുക",
-	"Test Mic": "",
+	"Test Mic": "മൈക്ക് പരിശോദിക്കുക",
 	"Test Speakers": "",
 	"Recording for 5 seconds": "",
 	"Recording for 4 seconds": "",
@@ -169,8 +168,8 @@
 	"Most data recorded for": "Most data recorded for",
 	"Data recorded for": "Data recorded for",
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
-	"Help your own language": "നമ്മുടെ പരിസ്ഥിതിയിലേക്ക് പ്രാദേശികവല്ക്കരണം അവതരിപ്പിച്ചുകൊണ്ട് ഭാഷകൾ തിരിച്ചു പിടിക്കാം",
-	"Congratulations!!! You have completed this batch of sentences": "",
+	"Help your own language": "നിങ്ങളുടെ മാതൃഭാഷയെ പരിപോഷിപ്പിക്കൂ",
+	"Congratulations!!! You have completed this batch of sentences": "അഭിനന്ദനങ്ങൾ നിങ്ങൾ വാചകങ്ങളുടെ ഈയൊരു കൂട്ടം പൂ൪ത്തിയാക്കിയിരിക്കുന്നു.",
 	"Select the language for voluntary contribution": "സ്വമനസ്സാലെയുള്ള സംഭാവന നൽകുന്നതിന്  ഭാഷ തിരഞ്ഞെടുക്കുക",
 	"Speak": "സംസാരിക്കുക",
 	"Validate What They Say": "ശ്രദ്ധിച്ചു കേൾക്കുക അവ൪ പറയുന്നത് ശരിയാണോയെന്ന് വിലയിരുത്തുക",
@@ -220,6 +219,9 @@
 	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "ഒരു ടീം എന്ന നിലയിൽ, ഞങ്ങളോടൊപ്പം ചേരാനും ഈ സംരംഭത്തിലേക്ക് നിങ്ങളുടെ ശബ്ദത്തിന്റെ 30 മിനിറ്റ് വരെ സംഭാവന നൽകാനും ഞങ്ങൾ നിങ്ങളെ ക്ഷണിക്കുന്നു. നിങ്ങളുടെ ശബ്ദം ഒരു അവസരത്തിൽ പൂർണ്ണമായി റെക്കോർഡ് ചെയ്യുന്നതിൽ ബുദ്ധിമുട്ടുണ്ടാവാമെന്നതിനാൽ, ഞങ്ങളുടെ വെബ്സൈറ്റ് പല തവണകളിലായി സന്ദർശിച്ച് നിങ്ങൾ നിർത്തിയിടത്തു നിന്ന് തുടങ്ങാനുള്ള സംവിധാനം ഞങ്ങൾ ഒരുക്കിയിട്ടുണ്ട്.",
 	"Select a language": "ഭാഷ തിരഞ്ഞെടുക്കുക",
 	"START CONTRIBUTING": "സംഭാവന ചെയ്യാൻ തുടങ്ങാം",
+	"National Language Translation Mission": "ദേശീയ ഭാഷാ ത൪ജ്ജമ ദൗത്യം",
+	"Badge ID": "ബാഡ്ജ് ഐഡി",
+	"Download": "ഡൗൺലോഡ് ചെയ്യുക",
 	"Please validate any error message before proceeding": "തുടരുന്നതിനു മുമ്പ് ഏതെങ്കിലും പിശക് സന്ദേശം സാധൂകരിക്കുക",
 	"Help us understand what’s wrong with the recording": "റെക്കോ൪ഡിംഗിൽ എന്താണ് തെറ്റ് എന്ന് മനസിലാക്കാൻ ഞങ്ങളെ സഹായിക്കുക",
 	"Next": "അടുത്തത്",
@@ -228,9 +230,7 @@
 	"You can select the language in which you want to participate": "നിങ്ങൾക്ക് പങ്കെടുക്കാൻ ആഗ്രഹിക്കുന്ന ഭാഷ തിരഞ്ഞെടുക്കാം",
 	"You can change the language in which you want to read content": "ഉള്ളടക്കം വായിക്കാൻ ആഗ്രഹിക്കുന്ന ഭാഷ നിങ്ങൾക്ക് മാറ്റാൻ കഴിയും",
 	"Click on the card to start contributing your voice": "നിങ്ങളുടെ ശബ്ദം സംഭാവന ചെയ്യാൻ ആരംഭിക്കുന്നതിന് കാ൪ഡിൽ ക്ലിക്കു ചെയ്യുക",
-	"Click on the card to validate what others have spoken":"മറ്റുള്ളവ൪ സംസാരിച്ചത് സാധൂകരിക്കാൻ കാ൪ഡിൽ ക്ലിക്കു ചെയ്യുക",
-	"Help your own language": "നിങ്ങളുടെ മാതൃഭാഷയെ പരിപോഷിപ്പിക്കൂ",
-	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences",
+	"Click on the card to validate what others have spoken": "മറ്റുള്ളവ൪ സംസാരിച്ചത് സാധൂകരിക്കാൻ കാ൪ഡിൽ ക്ലിക്കു ചെയ്യുക",
 	"Levels and Badging @BoloIndia": "ലെവലും ബാഡ്ജിംഗും @പറയൂ ഇന്ത്യ",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "വെങ്കലം",
@@ -244,5 +244,11 @@
 	"Sentences": "വാക്യങ്ങൾ",
 	"(Recording + Validating)": "(റെക്കോ൪ഡിംഗ് + മൂല്യനി൪ണ്ണയം)",
 	"Badge": "ബാഡ്ജ്",
-	"N/A": "ബാധകമല്ല"
+	"N/A": "ബാധകമല്ല",
+	"Most Contributed - <span id=\"languageId\"></span>": "Most Contributed - <span id=\"languageId\"></span>",
+	"Data recorded for <span id=\"languageChoiceId\"></span>": "Data recorded for <span id=\"languageChoiceId\"></span>",
+	"You are on a spree !!": "You are on a spree !!",
+	"WoaaH!! You’ve earned your <span id=\"badge-name-1\">1st</span> Badge": "WoaaH!! You’ve earned your <span id=\"badge-name-1\">1st</span> Badge",
+	"<span id=\"badge-name-2\">Bronze</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.": "<span id=\"badge-name-2\">Bronze</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.",
+	"Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your 2nd Badge. <a href=\"/badges\">Know more</a>": "Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your 2nd Badge. <a href=\"/badges\">Know more</a>"
 }
