--- a/locales/hi.json
+++ b/locales/hi.json
@@ -58,7 +58,7 @@
 	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "एकस्टेप संगठन सभी भागीदारों को एक साथ लाता है और बड़े पैमाने पर जटिल सामाजिक समस्याओं को हल करने के लिए खुले बुनियादी ढाँचे, उपकरण और रूपरेखा का निर्माण करता है। हम खुले स्रोत के डिजिटल बुनियादी ढांचे का लाभ उठाते हुए ऐसा करते हैं, जिसे हमने सनबर्ड नाम दिया है और सोसिएटल प्लेटफार्म एप्रोच के साथ हम काम करते हैं।",
 	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "एकस्टेप एक गैर-लाभकारी संगठन है, जिसकी स्थापना रोहिणी, नंदन निलेकनी और शंकर मारुवाड़ा ने की है।",
 	"Let's get started!": "चलिए शुरू करते हैं",
-	"SKIP": "छोड़ें",
+	"SKIP": "छोड़ दें",
 	"STOP RECORDING": "रिकॉर्ड करना बंद करें",
 	"Audio recording is too small. Please Re-record": "ऑडियो रिकॉर्डिंग बहुत छोटी है। कृपया फिर से रिकॉर्ड करें",
 	"RE-RECORD": "फिर से रिकॉर्ड करें",
@@ -232,14 +232,13 @@
 	"Download": "डाउनलोड करें",
 	"Help us understand what’s wrong with the recording": "रिकॉर्डिंग में क्या गड़बड़ी है, यह समझने में हमारी मदद करें",
 	"Please validate any error message before proceeding": "आगे बढ़ने से पहले, कृपया किसी गड़बड़ी वाले मैसेज की पुष्टि करें",
-	"SKIP": "छोड़ दें",
 	"Next": "आगे बढ़ें",
 	"CLOSE": "बंद करें",
 	"Back": "वापस जाएं",
 	"You can select the language in which you want to participate": "आप जिस भाषा में योगदान देना चाहते हैं, उसे चुन सकते हैं",
 	"You can change the language in which you want to read content": "आप जिस भाषा में कॉन्टेंट पढ़ना चाहते हैं, उस भाषा में बदल सकते हैं",
 	"Click on the card to start contributing your voice": "अपनी आवाज़ का योगदान देना शुरू करने के लिए कार्ड पर क्लिक करें",
-	"Click on the card to validate what others have spoken":"दूसरे लोगों ने जो बोला है उसकी पुष्टि करने के लिए कार्ड पर क्लिक करें",
+	"Click on the card to validate what others have spoken": "दूसरे लोगों ने जो बोला है उसकी पुष्टि करने के लिए कार्ड पर क्लिक करें",
 	"Levels and Badging @BoloIndia": "लेवल और बैज @बोलो इंडिया",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ब्रॉन्ज",
@@ -253,5 +252,9 @@
 	"Contributions": "योगदान",
 	"(Recording + Validating)": "(रिकॉर्डिंग + पुष्टि)",
 	"Badge": "बैज",
-	"N/A": "उपलब्ध नहीं"
+	"N/A": "उपलब्ध नहीं",
+	"You are on a spree !!": "You are on a spree !!",
+	"WoaaH!! You’ve earned your <span id=\"badge-name-1\">1st</span> Badge": "WoaaH!! You’ve earned your <span id=\"badge-name-1\">1st</span> Badge",
+	"<span id=\"badge-name-2\">Bronze</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.": "<span id=\"badge-name-2\">Bronze</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.",
+	"Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your 2nd Badge. <a href=\"/badges\">Know more</a>": "Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your 2nd Badge. <a href=\"/badges\">Know more</a>"
 }
