--- a/locales/hi.json
+++ b/locales/hi.json
@@ -254,7 +254,8 @@
 	"Badge": "बैज",
 	"N/A": "उपलब्ध नहीं",
 	"You are on a spree !!": "You are on a spree !!",
-	"WoaaH!! You’ve earned your <span id=\"badge-name-1\">1st</span> Badge": "WoaaH!! You’ve earned your <span id=\"badge-name-1\">1st</span> Badge",
+	"WoaaH!! You’ve earned your <span id=\"badge-name-1\">1st</span> Badge": "शाबाश! आपने अपना <span id=\"badge-name-1\"></span> बैज जीत लिया है",
 	"<span id=\"badge-name-2\">Bronze</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.": "<span id=\"badge-name-2\">Bronze</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.",
-	"Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your 2nd Badge. <a href=\"/badges\">Know more</a>": "Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your 2nd Badge. <a href=\"/badges\">Know more</a>"
+	"You are driving the spirit of your language": "You are driving the spirit of your language",
+	"Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your <span id=\"next-badge\">2nd</span> Badge. <a href=\"/badges\">Know more</a>": "अपना <span id=\"next-badge-count\"></span> बैज जीतने के लिए आपका अगला लक्ष्य <span id=\"next-badge\"></span> वाक्यों तक पहुंचना है. <a href=\"/badges\">ज़्यादा जानें</a>"
 }
