| Priyanshu | updated missing translation in malayalam

--- a/locales/ml.json
+++ b/locales/ml.json
@@ -128,8 +128,8 @@
 	"If you are unsure of the match, skip the particular voice sample": "പൊരുത്തപ്പെടുന്നുണ്ടോ എന്ന് ഉറപ്പില്ലെങ്കിൽ, ആ ശബ്ദ സാമ്പിൾ ഒഴിവാക്കുക",
 	"Username cannot be more than 12 characters": "യൂസർനെയിമിൽ 12 പ്രതീകങ്ങളിൽ കൂടുതൽ പാടില്ല",
 	"EkStep Foundation": "ഏക്സ്റ്റെപ്പ് ഫൗണ്ടേഷൻ",
-	"hrs recorded in": "",
-	"hrs validated in": "",
+	"hrs recorded in": "%language ഭാഷയിൽ %hours മണിക്കൂറുകൾ  റെക്കോർഡ് ചെയ്തിട്ടുണ്ട്",
+	"hrs validated in": "%language ഭാഷയിൽ %hours മണിക്കൂറുകൾ ശരിയെന്ന് രേഖപ്പെടുത്തിയിരിക്കുന്നു",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> സെക്കൻ്റിന് ശേഷം റെക്കോർഡിംഗ് താനേ നിൽക്കും",
 	"Incorrect": "തെറ്റ്",
 	"Replay": "വീണ്ടും പ്ലേ ചെയ്യുക",
@@ -207,7 +207,7 @@
 	"Thank you for your enthusiasm to validate the recordings.": "രേഖപ്പെടുത്തലുകൾ സാധൂകരിക്കുന്നതിൽ നിങ്ങൾ കാണിച്ച താൽപര്യത്തിന് നന്ദി",
 	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "<span id=\"spn-validation-language\"></span> ഭാഷയിൽ ഞങ്ങൾക്ക് വിവരശേഖരമില്ല.ദയവായി പിന്നീട് ശ്രമിക്കുക",
 	"Start Contributing in <span id=\"start-validation-language\"></span>": "<span id=\"start-validation-language\"></span> ഭാഷയിൽ സംഭാവന ചെയ്യുക",
-	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
+	"Please test your <b>speakers</b>": "നിങ്ങളുടെ സ്പീക്കറുകൾ പരിശോധിക്കുക",
 	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ഇന്ത്യൻ ഭാഷകളിലെ ശബ്ദം തിരിച്ചറിയാനുള്ള സംവിധാനങ്ങളിൽ ഇന്ത്യ സ്വയം പര്യാപ്തത നേടേണ്ടതാണ്.ഇതിനായി ഇന്ത്യൻ ഭാഷകളിലെ ശബ്ദങ്ങൾ നിറഞ്ഞ ഒരു സ്വതന്ത്ര ശബ്ദശേഖരം സൃഷ്ടിക്കുന്നതിന് നമ്മൾ ആഗ്രഹിക്കുന്നു.ഇന്ത്യ ഗവണമെന്റിന്റെ ദേശീയ ഭാഷ ത൪ജ്ജമ ദൗത്യത്തിനു കീഴിൽഎംഈഐറ്റിവൈ ആണ് നി൪വ്വഹിക്കുന്നത്.ഏക്സ്റ്റെപ് ഫൗണ്ടേഷൻ അതിന്റെ <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a>  പോലെയുള്ള വിവിധ സംവിധാനങ്ങളിലൂടെ ഇതിനെ പിന്തുണക്കുന്നു.",
 	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "ഇതിനായി പറയൂ ഇന്ത്യ സ്വമനസ്സാ നിങ്ങളുടെ ശബ്ദം സംഭാവന ചെയ്യുന്നതിന് നിങ്ങളെ ക്ഷണിക്കുന്നു.നിങ്ങളുടെ എല്ലാ സംഭാവനകളും ഉപയോഗപ്രദമായ രീതിയിൽ സമൂഹത്തിന് ലഭ്യമാക്കുന്നു. പിന്നീട് ഭാഷാ സാങ്കേതിക വിദഗ്ദ൪ ഈ സംഭാവനകളെ  ലോക നിലവാരത്തിലുള്ള  ശബ്ദതിരിച്ചറിയൽ സംവിധാനങ്ങൾ വികസിപ്പിക്കുന്നതിന് ഉപയോഗിക്കുന്നു.",
 	"India is a land of many languages, our digital strategy must reflect it.": "ഡിജിറ്റൽ സാങ്കേതികവിദ്യയ്ക്ക് പ്രാഥമിക പരിഗണന നൽകുന്ന സംവിധാനത്തിൽ നമ്മുടെ ബഹുഭാഷാ ഡിഎൻഎയുടെ അഭാവം ഇപ്പോഴുമുണ്ട്",
