--- a/locales/hi.json
+++ b/locales/hi.json
@@ -225,9 +225,9 @@
 	"Please speak clearly": "कृपया साफ़-साफ़ बोलें",
 	"Low/No Background Noise": "आस-पास में शोर कम/बिल्कुल नहीं है",
 	"Background Noise Detected": "बैकग्राउंड में शोर कम/बिल्कुल नहीं है",
-	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है। आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं।",
 	"Congratulations! You have validated a batch of recordings!": "बधाई हो! आपके रिकॉर्डिंग के एक बैच की पुष्टि कर दी है।",
-	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है। आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं।",
 	"National Language Translation Mission": "नेशनल लैंग्वेज ट्रांसलेशन मिशन",
 	"Download": "डाउनलोड करें",
 	"Help us understand what’s wrong with the recording": "रिकॉर्डिंग में क्या गड़बड़ी है, यह समझने में हमारी मदद करें",
