--- a/locales/mr.json
+++ b/locales/mr.json
@@ -177,14 +177,13 @@
 	"Download": "डाउनलोड करा",
 	"Help us understand what’s wrong with the recording": "रेकॉर्डिंगमध्ये काय चूकीचे आहे, हे समजण्यास आम्हाला मदत करा",
 	"Please validate any error message before proceeding": "कृपया पुढे जाण्यापूर्वी, कोणत्याही प्रकारच्या त्रुटी संदेशाचे प्रमाणीकरण करा",
-	"SKIP": "सोडून टाका",
 	"Next": "पुढे जा",
 	"CLOSE": "बंद करा",
 	"Back": "परत जा",
 	"You can select the language in which you want to participate": "आपण ज्या भाषेचे योगदान देऊ इच्छिता, ती भाषा आपण निवडू शकता",
 	"You can change the language in which you want to read content": "आपण ज्या भाषेची सामग्री वाचू इच्छिता, ती भाषा बदलू शकता",
 	"Click on the card to start contributing your voice": "आपल्या आवाजाचे योगदान देण्याची सुरू करण्यासाठी कार्डवर क्लिक करा",
-	"Click on the card to validate what others have spoken":"इतरांनी जे बोलले आहे ते प्रमाणित करण्यासाठी कार्डवर क्लिक करा",
+	"Click on the card to validate what others have spoken": "इतरांनी जे बोलले आहे ते प्रमाणित करण्यासाठी कार्डवर क्लिक करा",
 	"Levels and Badging @BoloIndia": "लेवर आणि बॅज @बोला भारत",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ब्रॉन्झ",
@@ -198,5 +197,10 @@
 	"Sentences": "वाक्य",
 	"(Recording + Validating)": "(रेकॉर्डिंग + प्रमाणीकरण)",
 	"Badge": "बॅज",
-	"N/A": "उपलब्ध नाही"
+	"N/A": "उपलब्ध नाही",
+	"You are driving the spirit of your language": "You are driving the spirit of your language",
+	"You are on a spree !!": "You are on a spree !!",
+	"WoaaH!! You’ve earned your <span id=\"badge-name-1\">1st</span> Badge": "WoaaH!! You’ve earned your <span id=\"badge-name-1\">1st</span> Badge",
+	"<span id=\"badge-name-2\">Bronze</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.": "<span id=\"badge-name-2\">Bronze</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.",
+	"Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your <span id=\"next-badge\">2nd</span> Badge. <a href=\"/badges\">Know more</a>": "Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your <span id=\"next-badge\">2nd</span> Badge. <a href=\"/badges\">Know more</a>"
 }
