--- a/locales/hi.json
+++ b/locales/hi.json
@@ -253,9 +253,10 @@
 	"(Recording + Validating)": "(रिकॉर्डिंग + पुष्टि)",
 	"Badge": "बैज",
 	"N/A": "उपलब्ध नहीं",
-	"You are on a spree !!": "You are on a spree !!",
-	"WoaaH!! You’ve earned your <span id=\"badge-name-1\">1st</span> Badge": "शाबाश! आपने अपना <span id=\"badge-name-1\"></span> बैज जीत लिया है",
-	"<span id=\"badge-name-2\">Bronze</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.": "<span id=\"badge-name-2\">Bronze</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.",
-	"You are driving the spirit of your language": "You are driving the spirit of your language",
-	"Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your <span id=\"next-badge\">2nd</span> Badge. <a href=\"/badges\">Know more</a>": "अपना <span id=\"next-badge-count\"></span> बैज जीतने के लिए आपका अगला लक्ष्य <span id=\"next-badge\"></span> वाक्यों तक पहुंचना है. <a href=\"/badges\">ज़्यादा जानें</a>"
+	"You are on a spree !!": "आप अच्छा कर रहे हैं !!",
+	"You are driving the spirit of your language": "आप अपनी भाषा को आगे बढ़ाने में जुटे हैं",
+	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"/badges\">Know more</a>": "आप <span id=\"next_badge_name\"></span> बैज जीतने से सिर्फ़ <span id=\"sentense_away_count\"></span> वाक्य दूर हैं। <a href=\"/badges\">ज़्यादा जानें</a>",
+	"WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge": "शाबाश! आपने अपना ब्रॉन्ज <span id=\"current_badge_name\"></span> जीत लिया है",
+	"<span id=\"current_badge_name_1\"></span> Contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_count\"></span> वाक्यों का योगदान करने के लिए आपने <span id=\"current_badge_name_1\"></span> योगदानकर्ता लेवल हासिल किया है।",
+	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"/badges\">Know more</a>": "अपना <span id=\"next_badge_name_1\"></span> बैज जीतने के लिए आपका अगला लक्ष्य <span id=\"next_badge_count\"></span> वाक्यों तक पहुंचना है। <a href=\"/badges\">ज़्यादा जानें</a>"
 }
