--- a/locales/en.json
+++ b/locales/en.json
@@ -105,5 +105,23 @@
 	"By number of speakers": "By number of speakers",
 	"VIEW ALL DETAILS": "VIEW ALL DETAILS",
 	"Hide details": "Hide details",
-	"Select Your Preferred Language": "Select Your Preferred Language"
+	"Select Your Preferred Language": "Select Your Preferred Language",
+	"Thank you for contributing!": "Thank you for contributing!",
+	"You are a champion": "You are a champion",
+	"You are on a spree !!": "You are on a spree !!",
+	"WooHoo!! You took the first important step": "WooHoo!! You took the first important step",
+	"You are driving the spirit of your language": "You are driving the spirit of your language",
+	"recordings contributed": "recordings contributed",
+	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"/badges\">Know more</a>": "You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"/badges\">Know more</a>",
+	"National Language Translation Mission": "National Language Translation Mission",
+	"Download": "Download",
+	"WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge": "WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge",
+	"<span id=\"current_badge_name_1\"></span> Contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_name_1\"></span> Contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.",
+	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"/badges\">Know more</a>": "Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"/badges\">Know more</a>",
+	"Share it with your friends and family": "Share it with your friends and family",
+	"Did you know?": "Did you know?",
+	"Most Contributed - <span id=\"languageId\"></span>": "Most Contributed - <span id=\"languageId\"></span>",
+	"Data recorded for <span id=\"languageChoiceId\"></span>": "Data recorded for <span id=\"languageChoiceId\"></span>",
+	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
+	"Contribute More": "Contribute More"
 }
