--- a/locales/bn.json
+++ b/locales/bn.json
@@ -280,7 +280,7 @@
 	"You can select the language in which you want to participate": "আপনি ভাষা নির্বাচন করতে পারেন যাতে আপনি অংশগ্রহণ করতে চান",
 	"You can change the language in which you want to read content": "আপনি ভাষা বদলাতে পারেন যাতে আপনি যে বিষয় পড়তে চান",
 	"Click on the card to start contributing your voice": "আপনার স্বর অবদান শুরু করতে কার্ড-এ ক্লিক করুন",
-	"Click on the card to validate what others have spoken":"অন্যেরা কে কি বলেছে তা যাচাই করতে কার্ড-এ ক্লিক করুন",
+	"Click on the card to validate what others have spoken": "অন্যেরা কে কি বলেছে তা যাচাই করতে কার্ড-এ ক্লিক করুন",
 	"Levels and Badging @BoloIndia": "স্তর ও ব্যাজিং @BoloIndia",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ব্রোঞ্চ",
@@ -294,5 +294,10 @@
 	"Sentences": "বাক্য",
 	"(Recording + Validating)": "(রেকর্ডিং + বৈধকরণ)",
 	"Badge": "ব্যাজ",
-	"N/A": "প্রযোজ্য নয়"
+	"N/A": "প্রযোজ্য নয়",
+	"You are on a spree !!": "আপনি ভাল করছেন!",
+	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"/badges\">Know more</a>": "আপনি <span id=\"next_badge_name\"></span> ব্যাজ অর্জন করা থেকে কেবলমাত্র <span id=\"sentense_away_count\"></span> বাক্য দূরে আছেন। <a href=\"/badges\">আরও জানুন</a>",
+	"WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge": "সাবাশ! আপনি আপনার <span id=\"current_badge_name\"></span> ব্যাজ অর্জন করেছেন",
+	"<span id=\"current_badge_name_1\"></span> Contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_count\"></span> বাক্য অবদানের জন্য <span id=\"current_badge_name_1\"></span> অবদানকারী স্তরে পৌঁছেছেন",
+	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"/badges\">Know more</a>": "আপনার পরবর্তী লক্ষ্য হল আপনার <span id=\"next_badge_name_1\"></span> ব্যাজ আনলক করতে <span id=\"next_badge_count\"></span> বাক্যে পৌঁছানো। <a href=\"/badges\">আরও জানুন</a>"
 }
