--- a/locales/en.json
+++ b/locales/en.json
@@ -123,5 +123,38 @@
 	"Most Contributed - <span id=\"languageId\"></span>": "Most Contributed - <span id=\"languageId\"></span>",
 	"Data recorded for <span id=\"languageChoiceId\"></span>": "Data recorded for <span id=\"languageChoiceId\"></span>",
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
-	"Contribute More": "Contribute More"
+	"Contribute More": "Contribute More",
+	"hrs recorded in": "%hours hrs recorded in %language",
+	"hrs validated in": "%hours hrs validated in %language",
+	"hours": "hours",
+	"minutes": "minutes",
+	"seconds": "seconds",
+	"Recording for 5 seconds": "Recording for 5 seconds",
+	"Recording for 4 seconds": "Recording for 4 seconds",
+	"Recording for 3 seconds": "Recording for 3 seconds",
+	"Recording for 2 seconds": "Recording for 2 seconds",
+	"Recording for 1 seconds": "Recording for 1 seconds",
+	"Playingback Audio": "Playingback Audio",
+	"Playing": "Playing",
+	"Test Mic": "Test Mic",
+	"Test Speakers": "Test Speakers",
+	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences",
+	"social sharing text with rank": "I've contributed towards building open language repository for India on http://boloindia.nplt.in. You and I can make a difference by donating our voices that can help machines learn our language. Our %language language ranks %rank on Bolo India. Do your bit and empower the language?",
+	"social sharing text without rank": "I've contributed towards building open language repository for India on http://boloindia.nplt.in. You and I can make a difference by donating our voices that can help machines learn our language. Do your bit and empower the language?",
+	"SKIP": "SKIP",
+	"Next": "Next",
+	"Back": "Back",
+	"CLOSE": "CLOSE",
+	"You can select the language in which you want to participate": "You can select the language in which you want to participate",
+	"You can change the language in which you want to read content": "You can change the language in which you want to read content",
+	"Click on the card to start contributing your voice": "Click on the card to start contributing your voice",
+	"Click on the card to validate what others have spoken": "Click on the card to validate what others have spoken",
+	"Level": "Level",
+	"Sentences": "Sentences",
+	"bronze": "bronze",
+	"silver": "silver",
+	"gold": "gold",
+	"platinum": "platinum",
+	"N/A": "N/A"
+
 }
