--- a/locales/kn.json
+++ b/locales/kn.json
@@ -1,32 +1,32 @@
 {
 	"hrs recorded in": "%language ನಲ್ಲಿ %hours ಗಂಟೆಗಳನ್ನು ದಾಖಲಿಸಲಾಗಿದೆ",
 	"hrs validated in": "%hours ಗಂಟೆಗಳ %language ನಲ್ಲಿ ಮೌಲ್ಯೀಕರಿಸಲಾಗಿದೆ",
-	"Konkani Roman":"ಕೊಂಕಣಿ ರೋಮನ್",
-	"Konkani DV":"ಕೊಂಕಣಿ ಡಿವಿ",
-	"Manipuri BN":"ಮಣಿಪುರಿ ಬಿಎನ್",
-	"Manipuri MM":"ಮಣಿಪುರಿ ಎಮ್ಎಮ್",
-	"Santali OL":"ಸಂತಾಲಿ ಒಎಲ್",
-	"Santali DV":"ಸಂತಾಲಿ ಡಿವಿ",
-	"English":"ಇಂಗ್ಲೀಷ್",
-	"ASSAMESE":"ಆಸಾಮೀಜ್",
-	"BENGALI":"ಬಂಗಾಲಿ",
-	"BODO":"ಬೋಡೋ",
-	"DOGRI":"ಡೋಗ್ರಿ / ಡೋಗರಿ",
-	"GUJARATI":"ಗುಜರಾತಿ",
-	"Hindi":"ಹಿಂದಿ",
-	"KANNADA":"ಕನ್ನಡ",
-	"KASHMIRI":"ಕಾಶ್ಮೀರಿ",
-	"MAITHILI":"ಮೈಥಿಲಿ",
-	"Malayalam":"ಮಲಯಾಳಂ",
-	"MARATHI":"ಮರಾಠಿ",
-	"ODIA":"ಉಡಿಯಾ",
-	"NEPALI":"ನೇಪಾಳಿ",
-	"PUNJABI":"ಪಂಜಾಬಿ",
-	"SANSKRIT":"ಸಂಸ್ಕೃತ",
-	"SINDHI":"ಸಿಂಧಿ",
-	"TAMIL":"ತಮಿಳ",
-	"Telugu":"ತೆಲುಗು",
-	"URDU":"ಉರ್ದು",
+	"Konkani Roman": "ಕೊಂಕಣಿ ರೋಮನ್",
+	"Konkani DV": "ಕೊಂಕಣಿ ಡಿವಿ",
+	"Manipuri BN": "ಮಣಿಪುರಿ ಬಿಎನ್",
+	"Manipuri MM": "ಮಣಿಪುರಿ ಎಮ್ಎಮ್",
+	"Santali OL": "ಸಂತಾಲಿ ಒಎಲ್",
+	"Santali DV": "ಸಂತಾಲಿ ಡಿವಿ",
+	"English": "ಇಂಗ್ಲೀಷ್",
+	"ASSAMESE": "ಆಸಾಮೀಜ್",
+	"BENGALI": "ಬಂಗಾಲಿ",
+	"BODO": "ಬೋಡೋ",
+	"DOGRI": "ಡೋಗ್ರಿ / ಡೋಗರಿ",
+	"GUJARATI": "ಗುಜರಾತಿ",
+	"Hindi": "ಹಿಂದಿ",
+	"KANNADA": "ಕನ್ನಡ",
+	"KASHMIRI": "ಕಾಶ್ಮೀರಿ",
+	"MAITHILI": "ಮೈಥಿಲಿ",
+	"Malayalam": "ಮಲಯಾಳಂ",
+	"MARATHI": "ಮರಾಠಿ",
+	"ODIA": "ಉಡಿಯಾ",
+	"NEPALI": "ನೇಪಾಳಿ",
+	"PUNJABI": "ಪಂಜಾಬಿ",
+	"SANSKRIT": "ಸಂಸ್ಕೃತ",
+	"SINDHI": "ಸಿಂಧಿ",
+	"TAMIL": "ತಮಿಳ",
+	"Telugu": "ತೆಲುಗು",
+	"URDU": "ಉರ್ದು",
 	"hours": "ಗಂಟೆಗಳು",
 	"minutes": "ನಿಮಿಷಗಳು",
 	"seconds": "ಸೆಕಂಡುಗಳ",
@@ -108,8 +108,8 @@
 	"Thank You for your valuable feedback": "ನಿಮ್ಮ ಅಮೂಲ್ಯವಾದ ಪ್ರತಿಕ್ರಿಯೆಗಾಗಿ ಧನ್ಯವಾದಗಳು",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "ನಿಮ್ಮ ಪ್ರತಿಕ್ರಿಯೆ ಬೋಲೋ ಇಂಡಿಯಾವನ್ನು ಸಮರ್ಪಕವನ್ನಾಗಿಸಲು ನಮಗೆ ಸಹಾಯ ಮಾಡುತ್ತದೆ, ಪ್ರತಿಕ್ರಿಯೆ ನೀಡಲು ನೀವು ನಿಮ್ಮ ಸಮಯವನ್ನು ವ್ಯಯಿಸಿದುದನ್ನು ನಾವು ಪ್ರಶಂಸಿಸುತ್ತೇವೆ.",
 	"Back to Home": "ಹಿಂತಿರುಗಿ",
-	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ಭಾರತೀಯ ಭಾಷೆಗಳಲ್ಲಿ ಭಾಷಣ ಗುರುತಿಸುವಿಕೆಯ ಕ್ಷೇತ್ರದಲ್ಲಿ ಭಾರತ ಆತ್ಮನಿರ್ಭರವಾಗಬೇಕಿದೆ. ಆದ್ದರಿಂದ, ನಾವು ಅನೇಕ ಭಾರತೀಯ ಧ್ವನಿಗಳ ಮುಕ್ತ ಮಾಹಿತಿ ಭಂಡಾರವನ್ನು ರಚಿಸಬಯಸುತ್ತೇವೆ. ಇದು ರಾಷ್ಟ್ರೀಯ ಭಾಷಾ ಅನುವಾದ ನಿಯೋಗ (ಎನ್\u200Cಎಲ್\u200Cಟಿಎಂ)ದ ಅಡಿಯಲ್ಲಿ ಭಾರತ ಸರ್ಕಾರದ ಎಮ್ಈಐಟಿವೈಯ ಪ್ರಯತ್ನವಾಗಿದೆ. ಈಕೆಸ್ಟೆಪ್ ಫೌಂಡೇಶನ್ ಈ ಪ್ರಯತ್ನವನ್ನು ಸಾರ್ವಜನಿಕ ಹಿತಾಸಕ್ತಿಯಲ್ಲಿ ಬೆಂಬಲಿಸುತ್ತದೆ ಮತ್ತು  <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> ಅಡಿಯಲ್ಲಿ ಇತರ ವಿವಿಧ ತೆರೆದ ಮೂಲ ಚೌಕಟ್ಟುಗಳೊಂದಿಗೆ ಅದರ ತೆರೆದ ಮೂಲ ಕೆಲಸವನ್ನು ನಿಯಂತ್ರಿಸುತ್ತದೆ.",
-	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "ಈ ಕಾರಣಕ್ಕಾಗಿ ಸ್ವಯಂಸೇವಕರಾಗಲು ಮತ್ತು ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ನೀಡಲು ಬೋಲೋ ಇಂಡಿಯಾ ನಿಮ್ಮನ್ನು ಆಹ್ವಾನಿಸುತ್ತದೆ. ನಿಮ್ಮ ಎಲ್ಲ ಕೊಡುಗೆಗಳು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಸಂಸ್ಕರಿಸಲಾಗುತ್ತವೆ ಮತ್ತು ಮರಳಿ ಸಮುದಾಯಕ್ಕೆ ಉಪಯುಕ್ತವಾದ ಶೈಲಿಯಲ್ಲಿ ಮುಕ್ತ ಮಾಹಿತಿಯಾಗಿ ಲಭ್ಯವಾಗುತ್ತದೆ. ಎಲ್ಲ ಭಾಷಾ ಉತ್ಸಾಹಿಗಳು ಮತ್ತು ತಂತ್ರಜ್ಞರು ವಿಶ್ವ ದರ್ಜೆಯ ಭಾಷಣ ಗುರುತಿಸುವಿಕೆಯ ಅಪ್ಲಿಕೇಶನ್\u200Cಗಳನ್ನು ಅಭಿವೃದ್ಧಿಪಡಿಸಲು ಈ ಮಾಹಿತಿಯನ್ನು ಬಳಸಬಹುದು. \"",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ಭಾರತೀಯ ಭಾಷೆಗಳಲ್ಲಿ ಭಾಷಣ ಗುರುತಿಸುವಿಕೆಯ ಕ್ಷೇತ್ರದಲ್ಲಿ ಭಾರತ ಆತ್ಮನಿರ್ಭರವಾಗಬೇಕಿದೆ. ಆದ್ದರಿಂದ, ನಾವು ಅನೇಕ ಭಾರತೀಯ ಧ್ವನಿಗಳ ಮುಕ್ತ ಮಾಹಿತಿ ಭಂಡಾರವನ್ನು ರಚಿಸಬಯಸುತ್ತೇವೆ. ಇದು ರಾಷ್ಟ್ರೀಯ ಭಾಷಾ ಅನುವಾದ ನಿಯೋಗ (ಎನ್‌ಎಲ್‌ಟಿಎಂ)ದ ಅಡಿಯಲ್ಲಿ ಭಾರತ ಸರ್ಕಾರದ ಎಮ್ಈಐಟಿವೈಯ ಪ್ರಯತ್ನವಾಗಿದೆ. ಈಕೆಸ್ಟೆಪ್ ಫೌಂಡೇಶನ್ ಈ ಪ್ರಯತ್ನವನ್ನು ಸಾರ್ವಜನಿಕ ಹಿತಾಸಕ್ತಿಯಲ್ಲಿ ಬೆಂಬಲಿಸುತ್ತದೆ ಮತ್ತು  <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> ಅಡಿಯಲ್ಲಿ ಇತರ ವಿವಿಧ ತೆರೆದ ಮೂಲ ಚೌಕಟ್ಟುಗಳೊಂದಿಗೆ ಅದರ ತೆರೆದ ಮೂಲ ಕೆಲಸವನ್ನು ನಿಯಂತ್ರಿಸುತ್ತದೆ.",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "ಈ ಕಾರಣಕ್ಕಾಗಿ ಸ್ವಯಂಸೇವಕರಾಗಲು ಮತ್ತು ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ನೀಡಲು ಬೋಲೋ ಇಂಡಿಯಾ ನಿಮ್ಮನ್ನು ಆಹ್ವಾನಿಸುತ್ತದೆ. ನಿಮ್ಮ ಎಲ್ಲ ಕೊಡುಗೆಗಳು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಸಂಸ್ಕರಿಸಲಾಗುತ್ತವೆ ಮತ್ತು ಮರಳಿ ಸಮುದಾಯಕ್ಕೆ ಉಪಯುಕ್ತವಾದ ಶೈಲಿಯಲ್ಲಿ ಮುಕ್ತ ಮಾಹಿತಿಯಾಗಿ ಲಭ್ಯವಾಗುತ್ತದೆ. ಎಲ್ಲ ಭಾಷಾ ಉತ್ಸಾಹಿಗಳು ಮತ್ತು ತಂತ್ರಜ್ಞರು ವಿಶ್ವ ದರ್ಜೆಯ ಭಾಷಣ ಗುರುತಿಸುವಿಕೆಯ ಅಪ್ಲಿಕೇಶನ್‌ಗಳನ್ನು ಅಭಿವೃದ್ಧಿಪಡಿಸಲು ಈ ಮಾಹಿತಿಯನ್ನು ಬಳಸಬಹುದು. \"",
 	"India is a land of many languages, our digital strategy must reflect it.": "ನಮ್ಮ ಬಹುಭಾಷಾ ಡಿಎನ್‌ಎ ಇನ್ನೂ ಡಿಜಿಟಲ್ ಮೊದಲ ತಂತ್ರದಲ್ಲಿ ಕಾಣೆಯಾಗಿದ ಅಂಶವಾಗಿದೆ",
 	"90% of India's population uses region languages to conduct their day-to-day activities.": "ಭಾರತವು ವಿಶಾಲವಾದ ಬಹುಭಾಷಾ ದೇಶವಾಗಿರುವುದರಿಂದ, ಭಾರತದ ಜನಸಂಖ್ಯೆಯ 90% ಜನರು ತಮ್ಮ ಶೈಕ್ಷಣಿಕ, ಸಾಮಾಜಿಕ ಮತ್ತು ಡಿಜಿಟಲ್ ಚಟುವಟಿಕೆಗಳನ್ನು ನಡೆಸಲು ಪ್ರಾದೇಶಿಕ ಭಾಷೆಗಳನ್ನು ಅವಲಂಬಿಸಿದ್ದಾರೆ.",
 	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "ಅಂತರ್ಜಾಲ ಬಳಕೆದಾರರ ಪ್ರಮಾಣವು ಹೆಚ್ಚಾಗುತ್ತಿರುವುದರಿಂದ  ಮತ್ತು ಆರ್ಥಿಕ, ಶೈಕ್ಷಣಿಕ ಮತ್ತು ಆರ್ಥಿಕ ಚಟುವಟಿಕೆಗಳಿಗೆ ಡಿಜಿಟಲ್ ವೇದಿಕೆಗಳನ್ನು ಪ್ರವೇಶಿಸುವ ಬೇಡಿಕೆಯಿರುವುದರಿಂದ, ಮೊದಲು ಭಾರತೀಯ ಭಾಷೆಗಳನ್ನು ವಿವೇಚಿಸಲು ಪ್ರಾರಂಭಿಸುವ ಅವಶ್ಯಕತೆಯಿದೆ.",
@@ -143,7 +143,7 @@
 	"Let's get started!": "ನಡೆಯಿರಿ ನಾವೀಗ ಆರಂಭಿಸೋಣ!",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "ರೆಕಾರ್ಡಿಂಗ್ <span id=\"counter\"></span> ನಂತರ ತಾನಾಗಿ ನಿಲ್ಲುತ್ತದೆ",
 	"Audio recording is too small. Please Re-record": "ಆಡಿಯೋ ರೆಕಾರ್ಡಿಂಗ್ ತುಂಬಾ ಚಿಕ್ಕದಾಗಿದೆ. ದಯವಿಟ್ಟು ಮರು-ರೆಕಾರ್ಡ್ ಮಾಡಿ",
-	"SKIP": "ತ್ಯಜಿಸಿ",
+	"SKIP": "ಬಿಟ್ಟುಬಿಡಿ",
 	"START RECORDING": "ರೆಕಾರ್ಡಿಂಗ್ ಅನ್ನು ಪ್ರಾರಂಭಿಸಿ",
 	"STOP RECORDING": "ರೆಕಾರ್ಡಿಂಗ್ ಮಾಡುವುದನ್ನು ನಿಲ್ಲಿಸಿ",
 	"RE-RECORD": "ಮರು-ರೆಕಾರ್ಡಿಂಗ್ ಮಾಡಿ",
@@ -198,16 +198,15 @@
 	"National Language Translation Mission": "ರಾಷ್ಟ್ರೀಯ ಭಾಷಾ ಅನುವಾದ ನಿಯೋಗ",
 	"Badge ID": "ಬ್ಯಾಜ್ ಐಡಿ",
 	"Download": "ಡೌನ್ ಲೋಡ್",
-	"Help us understand what’s wrong with the recording": "ರೆಕಾರ್ಡಿಂಗ್\u200C ನಲ್ಲಿ ಆದ ತಪ್ಪನ್ನು ಅರ್ಥಮಾಡಿಕೊಳ್ಳಲು ನಮಗೆ ಸಹಾಯ ಮಾಡಿ",
+	"Help us understand what’s wrong with the recording": "ರೆಕಾರ್ಡಿಂಗ್‌ ನಲ್ಲಿ ಆದ ತಪ್ಪನ್ನು ಅರ್ಥಮಾಡಿಕೊಳ್ಳಲು ನಮಗೆ ಸಹಾಯ ಮಾಡಿ",
 	"Please validate any error message before proceeding": "ದಯವಿಟ್ಟು ಮುಂದುವರಿಯುವ ಮೊದಲು ಯಾವುದೇ ಸಂದೇಶದಲ್ಲಿನ ದೋಷವನ್ನು ಮೌಲ್ಯೀಕರಿಸಿರಿ.",
-	"SKIP": "ಬಿಟ್ಟುಬಿಡಿ",
 	"Next": "ಮುಂದಿನ",
 	"CLOSE": "ಮುಚ್ಚು",
 	"Back": "ಹಿಂದೆ",
 	"You can select the language in which you want to participate": "ನೀವು ಭಾಗವಹಿಸಬಯಸುವ ಭಾಷೆಯನ್ನು ನೀವು ಆಯ್ಕೆಮಾಡಬಹುದು",
 	"You can change the language in which you want to read content": "ನೀವು ವಿಷಯವನ್ನು ಓದಬಯಸುವ ಭಾಷೆಯನ್ನು ನೀವು ಬದಲಾಯಿಸಬಹುದು",
 	"Click on the card to start contributing your voice": "ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ನೀಡುವುದನ್ನು ಪ್ರಾರಂಭಿಸಲು ಕಾರ್ಡ್ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ",
-	"Click on the card to validate what others have spoken":"ಇತರರು ಮಾತನಾಡಿದುದನ್ನು ಮೌಲ್ಯೀಕರಿಸಲು ಕಾರ್ಡ್ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ",
+	"Click on the card to validate what others have spoken": "ಇತರರು ಮಾತನಾಡಿದುದನ್ನು ಮೌಲ್ಯೀಕರಿಸಲು ಕಾರ್ಡ್ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ",
 	"Levels and Badging @BoloIndia": "ಲೆವೆಲ್ಯ್ ಆಂಡ್ ಬ್ಯಾಜಿಂಗ್ @ ಬೋಲೋ ಇಂಡಿಯಾ",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ಕಂಚು",
@@ -221,5 +220,11 @@
 	"Sentences": "ವಾಕ್ಯಗಳು",
 	"(Recording + Validating)": "(ರೆಕಾರ್ಡಿಂಗ್ + ಮೌಲ್ಯೀಕರಣ)",
 	"Badge": "ಬ್ಯಾಜ್",
-	"N/A": "ಅನ್ವಯಿಸುವುದಿಲ್ಲ"
+	"N/A": "ಅನ್ವಯಿಸುವುದಿಲ್ಲ",
+	"You are on a spree !!": "ನೀವು ಉತ್ಸಾಹದಲ್ಲಿರುವಿರಿ !!",
+	"You are driving the spirit of your language": "ನೀವು ನಿಮ್ಮ ಭಾಷೆಯ ಉತ್ಸಾಹವನ್ನು ನಡೆಸುತ್ತಿದ್ದೀರಿ",
+	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"/badges\">Know more</a>": "ನೀವು <span id=\"next_badge_name\"></span> ಬ್ಯಾಜ್ ಅನ್ನು ಗಳಿಸಲು ಕೇವಲ <span id=\"sentense_away_count\"></span> ವಾಕ್ಯಗಳಷ್ಟು ದೂರವಿರುವಿರಿ. <a href=\"/badges\">ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ</a>",
+	"WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge": "ಓಹೋ!!  ನೀವು <span id=\"current_badge_name\"></span> ಬ್ಯಾಜ್ ಅನ್ನು ಗಳಿಸಿದ್ದೀರಿ",
+	"<span id=\"current_badge_name_1\"></span> Contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_count\"></span> ವಾಕ್ಯಗಳ ಕೊಡುಗೆಗಾಗಿ <span id=\"current_badge_name_1\"></span> ಕೊಡುಗೆ ಮಟ್ಟವನ್ನು ಸಾಧಿಸಲಾಗಿದೆ",
+	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"/badges\">Know more</a>": "ನಿಮ್ಮ ಮುಂದಿನ ಗುರಿ ನಿಮ್ಮ \"Y\" ಬ್ಯಾಜ್ ಅನ್ನು ಅನ್ ಲಾಕ್ ಮಾಡಲು \"X\"  ವಾಕ್ಯಗಳನ್ನು ತಲುಪುವುದಾಗಿದೆ. <a href=\"/badges\">ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ</a>"
 }
