| Priyanshu | added translation for pa,or,as in contributor thankyou page

--- a/locales/as.json
+++ b/locales/as.json
@@ -86,7 +86,7 @@
 	"Recording Instructions": "বাণীবদ্ধকৰাৰ নিয়মাৱলী",
 	"START": "আৰম্ভ",
 	"Let's get started!": "আৰম্ভ কৰা",
-	"SKIP": "বাদ দিয়া",
+	"SKIP": "এৰি আগলৈ যোৱা",
 	"STOP RECORDING": "বাণীবদ্ধকৰণ বন্ধ",
 	"Audio recording is too small. Please Re-record": "অডিঅ' ৰেকৰ্ডিংটো বহুত সৰু, অনুগ্ৰহ কৰি পুনৰ ৰেকৰ্ড কৰক",
 	"RE-RECORD": "পুনৰ বাণীবদ্ধকৰণ",
@@ -284,14 +284,13 @@
 	"Badge ID": "বেজ পৰিচয় পত্ৰ",
 	"Please validate any error message before proceeding": "অনুগ্ৰহ কৰি আগবাঢ়ি যোৱাৰ আগতে কোনো ত্ৰুটি বাৰ্তা থাকিলে বৈধকৰণ কৰক",
 	"Help us understand what’s wrong with the recording": "বাণীবদ্ধটোত কি ভুল হৈছে আমাক বুজাত সহায় কৰক",
-	"SKIP": "এৰি আগলৈ যোৱা",
 	"Next": "পৰৱৰ্তী",
 	"CLOSE": "বন্ধ কৰক",
 	"Back": "পিছলৈ",
 	"You can select the language in which you want to participate": "আপুনি অংশগ্ৰহণ কৰিব বিচৰা ভাষাটো বাছনি কৰিব পাৰে",
 	"You can change the language in which you want to read content": "আপুনি সমল পঢ়িব বিচৰা ভাষাটো সলনি কৰিব পাৰে",
 	"Click on the card to start contributing your voice": "আপোনাৰ কণ্ঠস্বৰৰ অৱদান আৰম্ভ কৰিবলৈ কাৰ্ডত ক্লিক কৰক",
-	"Click on the card to validate what others have spoken":"আনসকলে কি কৈছে সেয়া বৈধকৰণ কৰিবলৈ কাৰ্ডত ক্লিক কৰক",
+	"Click on the card to validate what others have spoken": "আনসকলে কি কৈছে সেয়া বৈধকৰণ কৰিবলৈ কাৰ্ডত ক্লিক কৰক",
 	"Levels and Badging @BoloIndia": "স্তৰসমূহ আৰু বেজবোৰ @BoloIndia",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ব্ৰঞ্জ",
@@ -305,5 +304,10 @@
 	"Sentences": "টা বাক্য",
 	"(Recording + Validating)": "(বাণীবদ্ধকৰণ + বৈধতাকৰণ)",
 	"Badge": "বেজ",
-	"N/A": "উপলব্ধ নহয়"
+	"N/A": "উপলব্ধ নহয়",
+	"You are on a spree !!": "আপুনি এক উল্লাখত আছে!",
+	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"/badges\">Know more</a>": "<span id=\"next_badge_name\"></span> বেজ উপাৰ্জন কৰাৰ পৰা আপুনি মাত্ৰ <span id=\"sentense_away_count\"></span> টা বাক্যৰ আঁতৰত আছে। <a href=\"/badges\">বেছিকৈ জানক</a>",
+	"WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge": "ৱাহ! আপুনি আপোনাৰ <span id=\"current_badge_name\"></span> বেজ অৰ্জন কৰিছে",
+	"<span id=\"current_badge_name_1\"></span> Contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_count\"></span> টা বাক্য অৱদান দিয়াৰ বাবে <span id=\"current_badge_name_1\"></span> অৱদানকাৰী শাৰীত উপনীত হৈছে",
+	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"/badges\">Know more</a>": "আপোনাৰ পৰৱৰ্তী লক্ষ্য হৈছে আপোনাৰ <span id=\"next_badge_name_1\"></span> বেজ আনলক কৰিবলৈ <span id=\"next_badge_count\"></span> টা বাক্যত উপনীত হোৱা।  <a href=\"/badges\">বেছিকৈ জানক</a>"
 }
