--- a/locales/or.json
+++ b/locales/or.json
@@ -249,7 +249,7 @@
 	"You can select the language in which you want to participate": "ଆପଣ ଯେଉଁ ଭାଷାକୁ ଅଂଶଗ୍ରହଣ କରିବାକୁ ଚାହୁଁଛନ୍ତି ତାହା ଚୟନ କରିପାରିବେ",
 	"You can change the language in which you want to read content": "ଆପଣ ଯେଉଁ ଭାଷା ବିଷୟବସ୍ତୁ ପଢିବାକୁ ଚାହୁଁଛନ୍ତି ସେହି ଭାଷାକୁ ଆପଣ ପରିବର୍ତ୍ତନ କରିପାରିବେ",
 	"Click on the card to start contributing your voice": "ତୁମର ସ୍ୱର ପ୍ରଦାନ ଆରମ୍ଭ କରିବା ପାଇଁ କାର୍ଡ ଉପରେ କ୍ଲିକ୍ କର",
-	"Click on the card to validate what others have spoken":"ଅନ୍ୟମାନେ ଯାହା କହିଛନ୍ତି ତାହା ବୈଧ କରିବାକୁ କାର୍ଡରେ କ୍ଲିକ୍ କରନ୍ତୁ",
+	"Click on the card to validate what others have spoken": "ଅନ୍ୟମାନେ ଯାହା କହିଛନ୍ତି ତାହା ବୈଧ କରିବାକୁ କାର୍ଡରେ କ୍ଲିକ୍ କରନ୍ତୁ",
 	"Levels and Badging @BoloIndia": "ସ୍ତର ଏବଂ ବ୍ୟାଜ୍ @ ବୋଲୋ ଇଣ୍ଡିଆ",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ପିତ୍ତଳ",
@@ -263,6 +263,11 @@
 	"Sentences": "ବାକ୍ୟଗୁଡ଼ିକ",
 	"(Recording + Validating)": "(ରେକର୍ଡିଂ + ବୈଧତା)",
 	"Badge": "ବ୍ୟାଜ୍",
-	"N/A": "ଏନ୍\u200C/ଏ"
-
+	"N/A": "ଏନ୍‌/ଏ",
+	"You are on a spree !!": "ଆପଣ ଏକ ସ୍ପ୍ରେରେ ଅଛନ୍ତି!",
+	"You are driving the spirit of your language": "ଆପଣ ଆପଣଙ୍କ ଭାଷାର ବିଜ୍ଞତା ପ୍ରତିପାଦନ କରିଛନ୍ତି।",
+	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"/badges\">Know more</a>": "ଆପଣ <span id=\"next_badge_name\"></span> ବ୍ୟାଜ୍ ପାଇବା ଠାରୁ କେବଳ <span id=\"sentense_away_count\"></span> ବାକ୍ୟ ଦୂରରେ ଅଛନ୍ତି। <a href=\"/badges\">ଅଧିକ ଜାଣନ୍ତୁ।</a>",
+	"WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge": "ଓ ! ଆପଣ <span id=\"current_badge_name\"></span> ବ୍ୟାଜ୍ ଅର୍ଜନ କରିଛନ୍ତି।",
+	"<span id=\"current_badge_name_1\"></span> Contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_count\"></span> ବାକ୍ୟଗୁଡିକ ଯୋଗଦାନ ପାଇଁ ଯୋଗଦାନକାରୀ ସ୍ତର ହାସଲ",
+	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"/badges\">Know more</a>": "ଆପଣଙ୍କର ପରବର୍ତ୍ତୀ ଲକ୍ଷ୍ୟ ହେଉଛି <span id=\"next_badge_name_1\"></span> ବ୍ୟାଜ୍ ଅନଲକ୍ କରି <span id=\"next_badge_count\"></span> ବାକ୍ୟରେ ପହଞ୍ଚିବା । <a href=\"/badges\">ଅଧିକ ଜାଣନ୍ତୁ।</a>"
 }
