--- a/locales/pa.json
+++ b/locales/pa.json
@@ -267,14 +267,13 @@
 	"Gender Distribution": "ਲਿੰਗ ਮੁਤਾਬਕ ਵੰਡ",
 	"Help us understand what’s wrong with the recording": "ਸਾਨੂੰ ਸਮਝਣ ਲਈ ਮਦਦ ਕਰੋ ਕਿ ਰਿਕਾਰਡਿੰਗ ਵਿੱਚ ਕੀ ਗਲਤ ਹੈ",
 	"Please validate any error message before proceeding": "ਜਾਰੀ ਰੱਖਣ ਤੋਂ ਪਹਿਲਾਂ ਕਿਸੇ ਵੀ ਗ਼ਲਤੀ ਸੁਨੇਹੇ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰੋ",
-	"SKIP": "ਛੱਡੋ",
 	"Next": "ਅੱਗੇ",
 	"CLOSE": "ਬੰਦ ਕਰੋ",
 	"Back": "ਪਿੱਛੇ",
 	"You can select the language in which you want to participate": "ਤੁਸੀਂ ਭਾਸ਼ਾ ਚੁਣ ਸਕਦੇ ਹੋ, ਜਿਸ ਵਾਸਤੇ ਤੁਸੀਂ ਯੋਗਦਾਨ ਪਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ",
 	"You can change the language in which you want to read content": "ਤੁਸੀਂ ਭਾਸ਼ਾ ਚੁਣ ਸਕਦੇ ਹੋ, ਜਿਸ ਵਾਸਤੇ ਤੁਸੀਂ ਸਮੱਗਰੀ ਪੜ੍ਹਨੀ ਚਾਹੁੰਦੇ ਹੋ",
 	"Click on the card to start contributing your voice": "ਆਪਣੀ ਆਵਾਜ਼ ਵਿੱਚ ਯੋਗਦਾਨ ਪਾਉਣਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ ਕਾਰਡ ਉੱਤੇ ਕਲਿੱਕ ਕਰੋ",
-	"Click on the card to validate what others have spoken":"ਹੋਰਾਂ ਵਲੋਂ ਬੋਲੇ ਗਏ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਕਾਰਡ ਉੱਤੇ ਕਲਿੱਕ ਕਰੋ",
+	"Click on the card to validate what others have spoken": "ਹੋਰਾਂ ਵਲੋਂ ਬੋਲੇ ਗਏ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਕਾਰਡ ਉੱਤੇ ਕਲਿੱਕ ਕਰੋ",
 	"Levels and Badging @BoloIndia": "ਪੱਧਰ ਤੇ ਬਿੱਲੇ  @BoloIndia",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ਕਾਂਸੀ",
@@ -288,5 +287,10 @@
 	"Sentences": "ਵਾਕ",
 	"(Recording + Validating)": "(ਰਿਕਾਰਡਿੰਗ + ਪ੍ਰਮਾਣਿਤ)",
 	"Badge": "ਬਿੱਲੇ",
-	"N/A": "ਲਾਗੂ ਨਹੀਂ"
+	"N/A": "ਲਾਗੂ ਨਹੀਂ",
+	"You are on a spree !!": "ਤੁਸੀਂ ਤਾਂ ਮਨੋਰੰਜਨ ਕਰ ਰਹੇ ਹੋ!",
+	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"/badges\">Know more</a>": "ਤੁਸੀਂ <span id=\"next_badge_name\"></span> ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ <span id=\"sentense_away_count\"></span> ਵਾਕ ਦੂਰ ਹੋ। <a href=\"/badges\">ਹੋਰ ਜਾਣੋ</a>",
+	"WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge": "ਵਾਹ! ਤੁਸੀਂ ਆਪਣਾ <span id=\"current_badge_name\"></span> ਬੈਜ ਹਾਸਲ ਕਰ ਲਿਆ",
+	"<span id=\"current_badge_name_1\"></span> Contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_count\"></span> ਵਾਕਾਂ ਦਾ ਯੋਗਦਾਨ ਪਾਉਣ ਨਾਲ <span id=\"current_badge_name_1\"></span> ਯੋਗਦਾਨੀ ਪੱਧਰ ਪ੍ਰਾਪਤ ਹੁੰਦਾ ਹੈ",
+	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"/badges\">Know more</a>": "ਤੁਹਾਡਾ ਅਗਲਾ ਟੀਚਾ <span id=\"next_badge_count\"></span> ਵਾਕ ਪੂਰੇ ਕਰਕੇ ਆਪਣਾ <span id=\"next_badge_name_1\"></span> ਬਿੱਲਾ ਲੈਣਾ ਹੈ। <a href=\"/badges\">ਹੋਰ ਜਾਣੋ</a>"
 }
